fix: overflow-y cannot scroll

--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -89,6 +89,11 @@ a {
   right: 0;
   padding: 25px 15px;
   font-size: 20px;
+  z-index: 5;
+}
+
+.panel {
+  margin-bottom: 7em;
 }
 
 .navbar {
